@@ -1,7 +1,9 @@
 package DriverCreation;
 
+import Pages.DialerPage;
 import io.appium.java_client.AppiumDriver;
-import org.junit.Test;
+import io.appium.java_client.android.AndroidDriver;
+import org.junit.*;
 import org.openqa.selenium.remote.DesiredCapabilities;
 
 import java.net.MalformedURLException;
@@ -9,22 +11,27 @@ import java.net.URI;
 import java.net.URL;
 
 public class Base {
-    @Test
-    public void createDriver() throws MalformedURLException {
-        DesiredCapabilities caps = new DesiredCapabilities();
+    protected AppiumDriver driver;
 
-        // Set the capabilities
-        caps.setCapability("platformName", "Android");
-        caps.setCapability("appium:automationName", "uiautomator2");
-        caps.setCapability("appium:deviceName", "Small Phone");
-        caps.setCapability("appium:app", "C:\\Users\\av896\\Downloads\\Test.apk");
-//        caps.setCapability("platformversion", "13");  for real device here we declared the version
+    public void setUp() throws MalformedURLException, InterruptedException {
+        DesiredCapabilities capabilities = new DesiredCapabilities();
+        capabilities.setCapability("platformName", "Android");
+        capabilities.setCapability("appium:automationName", "uiautomator2");
+        capabilities.setCapability("appium:deviceName", "vivo V2140");
+        capabilities.setCapability("appium:platformVersion", "12");
+        capabilities.setCapability("appium:appPackage", "com.google.android.dialer");
+        capabilities.setCapability("appium:appActivity", "com.google.android.dialer.extensions.GoogleDialtactsActivity");
 
-        URL url = URI.create("http://127.0.0.1:4723/").toURL();
-        AppiumDriver driver = new AppiumDriver(url, caps);
+        URL url = new URL("http://127.0.0.1:4723/");
+        driver = new AndroidDriver(url, capabilities);
+         DialerPage dialerPage = new DialerPage(driver);
 
-        System.out.println("Successfully installed");
 
-        driver.quit();
+    }
+
+    public void tearDown() {
+        if (driver != null) {
+            driver.quit();
+        }
     }
 }
